# spin-todo

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
static/: app.js  index.html
static/css/: main.css
